--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -18,8 +18,7 @@
     <header>
         <ul>
             <li><a href='/index.php'>Home</a></li>
-            <li><a href='/index.php?controller=login&action=home'>Login</a></li>
-            <li><a href='/index.php?controller=register&action=home'>Register</a></li>
+            <li><a href='/index.php?controller=dashboard&action=home'>Dashboard</a></li>
         </ul>
     </header>
 
