--- a/views/pages/home.phtml
+++ b/views/pages/home.phtml
@@ -3,47 +3,34 @@
  * @var \Example\Block\Pages\HomeBlock $block
  */
 ?>
-<p>Hello there <?php echo $block->getFirstName() . ' ' . $block->getLastName(); ?>!<p>
+<h1><?php echo $block->getTitle(); ?></h1>
 
-<p>You successfully landed on the home page. Congrats!</p>
+<p>Please contact us. Thanks!</p>
 
 <form id="register-lead">
-    <input type="email" name="email" class="lead-input" />
-    <input type="text" name="firstname" class="lead-input" />
-    <input type="text" name="lastname" class="lead-input" />
-    <input type="tel" name="phone" class="lead-input" />
-    <input type="text" name="address" class="lead-input" />
-    <input type="text" name="square_footage" class="lead-input" />
+    <label for="register-lead" >Email: </label><input type="email" name="email" class="lead-input" />
+    <label for="register-lead" >First Name: </label><input type="text" name="firstname" class="lead-input" />
+    <label for="register-lead" >Last Name: </label><input type="text" name="lastname" class="lead-input" />
+    <label for="register-lead" >Phone: </label><input type="tel" name="phone" class="lead-input" />
+    <label for="register-lead" >Address: </label><input type="text" name="address" class="lead-input" />
+    <label for="register-lead" >Square Footage: </label><input type="text" name="square_footage" class="lead-input" />
 </form>
 
-<div id="div1">
-
-</div>
+<div id="div1"></div>
 
 <script>
-
-    var count = 0;
 
     $('.lead-input').on('keyup', function () {
 
         var form = $('#register-lead');
         var data = form.serialize();
 
-        console.log(data);
-
-        //alert($(this).val());
         $.ajax({
             url: "api/leads/leads.php?controller=leads&action=create",
             data: data,
             type: 'post',
             success: function(result){
-
-                count = count + 1;
-                //alert(result);
-                //alert('typed');
                 $("#div1").html(result);
-
-                console.log(count);
             }
         });
 
