--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -4,12 +4,43 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <style>
 
+          header {
+              background-color: darkcyan;
+          }
+
+          header ul {
+              list-style: none;
+              width: 100%;
+          }
+
+          header ul li {
+              display: inline-block;
+              width: 49%;
+              margin: 10px 0;
+              text-align: center;
+          }
+
+          header ul li a {
+              text-decoration: none;
+              font-size: 18px;
+              color: white;
+              font-weight: bold;
+          }
+
           .messages .error {
               background-color: lightcoral;
           }
 
           .messages .success {
               background-color: green;
+          }
+
+          #register-lead div {
+              display: block;
+          }
+
+          #register-lead div label {
+              display: block;
           }
 
       </style>
@@ -22,26 +53,29 @@
         </ul>
     </header>
 
-    <div class="messages">
-        <?php if (isset($_SESSION['is_message'])) : ?>
-            <div class="<?php echo $_SESSION['type_message']; ?>"><?php echo $_SESSION['message']; ?></div>
-        <?php
 
-            unset($_SESSION['is_message']);
-            unset($_SESSION['type_message']);
-            unset($_SESSION['message']);
-
-        endif;
-
-        ?>
-    </div>
 
     <div class="main">
-        <?php require_once('./routes.php'); ?>
+
+        <div class="messages">
+            <?php if (isset($_SESSION['is_message'])) : ?>
+                <div class="<?php echo $_SESSION['type_message']; ?>"><?php echo $_SESSION['message']; ?></div>
+                <?php
+
+                unset($_SESSION['is_message']);
+                unset($_SESSION['type_message']);
+                unset($_SESSION['message']);
+
+            endif;
+
+            ?>
+        </div>
+
+        <?php require_once('./router/routes.php'); ?>
     </div>
 
-    <footer>
-      Copyright
+    <footer style="margin-top: 20px;">
+      Copyright 2018 - Example Demo
     </footer>
   <body>
 <html>
