--- a/views/pages/home.phtml
+++ b/views/pages/home.phtml
@@ -8,12 +8,12 @@
 <p>Please contact us. Thanks!</p>
 
 <form id="register-lead">
-    <label for="register-lead" >Email: </label><input type="email" name="email" class="lead-input" />
-    <label for="register-lead" >First Name: </label><input type="text" name="firstname" class="lead-input" />
-    <label for="register-lead" >Last Name: </label><input type="text" name="lastname" class="lead-input" />
-    <label for="register-lead" >Phone: </label><input type="tel" name="phone" class="lead-input" />
-    <label for="register-lead" >Address: </label><input type="text" name="address" class="lead-input" />
-    <label for="register-lead" >Square Footage: </label><input type="text" name="square_footage" class="lead-input" />
+    <div><label for="register-lead" >Email: </label><input type="email" name="email" class="lead-input" /></div>
+    <div><label for="register-lead" >First Name: </label><input type="text" name="firstname" class="lead-input" /></div>
+    <div><label for="register-lead" >Last Name: </label><input type="text" name="lastname" class="lead-input" /></div>
+    <div><label for="register-lead" >Phone: </label><input type="tel" name="phone" class="lead-input" /></div>
+    <div><label for="register-lead" >Address: </label><input type="text" name="address" class="lead-input" /></div>
+    <div><label for="register-lead" >Square Footage: </label><input type="text" name="square_footage" class="lead-input" /></div>
 </form>
 
 <div id="div1"></div>
