more styling empty leads check on dashboard

--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -43,6 +43,9 @@
               display: block;
           }
 
+          .main {
+            margin: 0 2%;
+          }
       </style>
   </head>
   <body>
