--- a/views/pages/home.phtml
+++ b/views/pages/home.phtml
@@ -17,7 +17,7 @@
 </form>
 
 <div id="div1"></div>
-<pre id="div2"><?php print_r($block->getBooks()); ?></pre>
+<pre id="div2"><?php //print_r($block->getBooks()); ?></pre>
 
 <script>
 
